--- a/miniProject/WebContent/WEB-INF/command.properties
+++ b/miniProject/WebContent/WEB-INF/command.properties
@@ -1,12 +1,30 @@
+#메인 
 /main/index.do=main.service.IndexService
 
+# 회원가입
 /member/writeForm.do=member.service.WriteFormService
 /member/checkId.do=member.service.CheckIdService
 /member/checkPost.do=member.service.CheckPostService
 /member/write.do=member.service.WriteService
 
+# 회원정보수정
+/member/modify.do=member.service.ModifyService
+/member/modifyForm.do=member.service.ModifyFormService
+
+# 로그인
 /member/loginForm.do=member.service.LoginFormService
 /member/login.do=member.service.LoginService
 /member/logout.do=member.service.LogoutService
 
+#글쓰기
+/board/boardWriteForm.do=board.service.BoardWriteFormService
+/board/boardWrite.do=board.service.BoardWriteService
+/board/boardList.do=board.service.BoardListService
+/board/boardView.do=board.service.BoardViewService
 
+#글수정
+/board/boardModifyForm.do=board.service.BoardModifyFormService
+/board/boardModify.do=board.service.BoardModifyService
+
+#글 검색
+/board/boardSearch.do=board.service.BoardSearchService
