--- a/WebContent/WEB-INF/command.properties
+++ b/WebContent/WEB-INF/command.properties
@@ -35,3 +35,11 @@
 
 # 글삭제 
 /board/boardDelete.do=board.service.BoardDeleteService
+
+# 그림업로드
+/imageBoard/imageBoardWriteForm.do=imageBoard.service.ImageBoardWriteFormService
+/imageBoard/imageBoardWrite.do=imageBoard.service.ImageBoardWriteService
+/imageBoard/imageBoardList.do=imageBoard.service.ImageBoardListService
+
+# 그림삭제
+/imageBoard/imageBoardChoiceDelete.do=imageBoard.service.ImageBoardChoiceDeleteService
