--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 		<servlet-class>com.control.ControlServlet</servlet-class>
 		<init-param>
 			<param-name>propertyConfig</param-name>
-			<param-value>D:/java_ee/miniProject/WebContent/WEB-INF/command.properties</param-value>
+			<param-value>C:/Users/yangh/Desktop/Algorithm/miniProject/WebContent/WEB-INF/command.properties</param-value>
 		</init-param>
 	</servlet>
 
